nginx-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # 告知 Deployment 运行 2 个与该模板匹配的 Pod
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: default # 可选，指定命名空间
spec:
  selector:
    app: nginx #  匹配 Nginx Pod 的标签
  ports:
    - protocol: TCP
      port: 80 # Service 暴露的端口
      targetPort: 80 # Pod 监听的端口
  type: NodePort # Service 类型，默认为 ClusterIP，集群内部访问
